Fixed flex layout issue with tutorial pages

--- a/src/App.css
+++ b/src/App.css
@@ -788,12 +788,6 @@ canvas {
 
 /* Page 2 */
 /*=================================*/
-.Tutorial-Page-2 .Tutorial-Page-Content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .Tutorial-Page-2 .Page-Sub-Header {
     padding-top: 1em;
 }
@@ -808,14 +802,15 @@ canvas {
 
 .Tutorial-Page-2 .Image-Wrapper-1 {
     padding-top: 1em;
+    padding-bottom: 1em;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .Tutorial-Page-2 .Image-1 {
-    max-width: 75%;
-    max-height: 75%;
+    max-width: 66%;
+    max-height: 66%;
 }
 
 .Tutorial-Page-2 .Content-Box-1, .Tutorial-Page-2 .Content-Box-2, .Tutorial-Page-2 .Content-Box-3 {
@@ -886,12 +881,6 @@ canvas {
 
 /* Page 4 */
 /*=================================*/
-.Tutorial-Page-4 .Tutorial-Page-Content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .Tutorial-Page-4 .Page-Sub-Header {
     padding-top: 1em;
 }
@@ -905,15 +894,17 @@ canvas {
 }
 
 .Tutorial-Page-4 .Image-Wrapper-1 {
-    width:66%;
+    width:100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .Tutorial-Page-4 .Image-1 {
-    max-width: 85%;
-    max-height: 85%;
+    max-width: 50%;
+    max-height: 50%;
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 .Tutorial-Page-4 .Content-Box-1, .Tutorial-Page-4 .Content-Box-2, .Tutorial-Page-4 .Content-Box-3 {
@@ -946,60 +937,3 @@ canvas {
 
 /* Page 5 */
 /*=================================*/
-.Tutorial-Page-5 .Tutorial-Page-Content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.Tutorial-Page-5 .Page-Sub-Header {
-    padding-top: 1em;
-}
-
-.Tutorial-Page-5 .Page-Instructions-1, .Tutorial-Page-5 .Page-Instructions-2, .Tutorial-Page-5 .Page-Instructions-3 {
-    padding-top: 1em;
-}
-
-.Tutorial-Page-5 .Page-Instructions-3, .Tutorial-Page-5 .Page-Instructions-4 {
-    padding-top: 2em;
-}
-
-.Tutorial-Page-5 .Image-Wrapper-1 {
-    padding-top: 1em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.Tutorial-Page-5 .Image-1 {
-    max-width: 75%;
-    max-height: 75%;
-}
-
-.Tutorial-Page-5 .Content-Box-1, .Tutorial-Page-5 .Content-Box-2, .Tutorial-Page-5 .Content-Box-3 {
-    padding-top: 1em;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.Tutorial-Page-5 .Image-Wrapper-2, .Tutorial-Page-5 .Image-Wrapper-3, .Tutorial-Page-5 .Image-Wrapper-4, .Tutorial-Page-5 .Image-Wrapper-5,
-.Tutorial-Page-5 .Image-Wrapper-6, .Tutorial-Page-5 .Image-Wrapper-7 {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.Tutorial-Page-5 .Image-2, .Tutorial-Page-5 .Image-3, .Tutorial-Page-5 .Image-4, .Tutorial-Page-5 .Image-5,
-.Tutorial-Page-5 .Image-6, .Tutorial-Page-5 .Image-7 {
-    padding-top: .25em;
-    max-width: 75%;
-    max-height: 75%;
-}
-
-.Tutorial-Page-5 .Content-Box-3 {
-    padding-bottom: 1em;
-}
